--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,9 +4,7 @@
    - master
  version: 1.0.{build}
  build_script:
-  - ps: Write-HOST "BUILD IT! $env:APPVEYOR_BUILD_VERSION"
+  - ps: Write-HOST "BUILD IT! " + $env:APPVEYOR_BUILD_VERSION
  test: off
  deploy_script:
-  on:
-    appveyor_repo_tag: true 
- - ps: Write-HOST "DEPLOY IT! $env:APPVEYOR_BUILD_VERSION"
+  - ps: Write-HOST "DEPLOY IT! " + $env:APPVEYOR_BUILD_VERSION
