--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,10 +1,15 @@
 
 version: 2.8.{build}
 init:
-- ps: $env:cenugetversion = if ($env:APPVEYOR_REPO_TAG -eq $True) { "$env:APPVEYOR_BUILD_VERSION" } else { "$env:APPVEYOR_BUILD_VERSION-$($env:APPVEYOR_REPO_BRANCH -Replace '/','-')" }
-- ps: Update-AppveyorBuild -Version $env:cenugetversion
+- ps: $shortHash= $env:APPVEYOR_REPO_COMMIT.substring(0, 7);
+- ps: $branchName = [System.Text.RegularExpressions.Regex]::Replace($env:APPVEYOR_REPO_BRANCH,"[^1-9a-zA-Z_]","");
+- ps: $env:nugetVersion = if ($env:APPVEYOR_REPO_TAG -eq $True) { "$env:APPVEYOR_BUILD_VERSION" } else { "$env:APPVEYOR_BUILD_VERSION-$branchName" }
+- ps: $env:dotNetVersion = if ($env:APPVEYOR_REPO_TAG -eq $True) { "$env:APPVEYOR_BUILD_VERSION" } else { "$env:APPVEYOR_BUILD_VERSION-$branchName+$shortHash" }
+- ps: Update-AppveyorBuild -Version $env:dotNetVersion
 build_script:
- - ps: Write-HOST "BUILD IT! " + $env:APPVEYOR_BUILD_VERSION
+ - ps: Write-HOST "BUILD IT! " 
+ - ps: WRITE-HOST "nuget ver: " $env:nugetVersion
+ - ps: WRITE-HOST "dotnet ver: " $env:dotNetVersion
 test: off
 deploy_script:
  - ps: if($env:APPVEYOR_REPO_TAG -eq $true){ Write-HOST "DEPLOY IT! "  $env:APPVEYOR_BUILD_VERSION}
