--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,4 +13,6 @@ build_script:
  - ps: WRITE-HOST "dotnet ver " $env:dotNetVersion
 test: off
 deploy_script:
- - ps: if($env:APPVEYOR_REPO_TAG -eq $true){ Write-HOST "DEPLOY IT! "  $env:APPVEYOR_BUILD_VERSION}
+ on: 
+    appveyor_repo_tag : true
+ - ps:  Write-HOST "DEPLOY IT! "  $env:APPVEYOR_BUILD_VERSION
